# amp

./: Amp.apparmor  CMakeLists.txt  README.md  amp.apparmor  manifest.json.in
app/: Amp.desktop.in  CMakeLists.txt  Main.qml  amp.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/Amp/tests/: __init__.py  test_main.py
app/tests/autopilot/love/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/Amp/: backend.cpp  backend.h  qmldir
backend/modules/Love/: backend.cpp  backend.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: amp.mateo-salta.pot  ca.po  es_ES.mo  es_ES.po  fr.po
